# KUK2RD

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: app.py
data/raw/: Rubber_Compounding_Chemicals_Article.docx
src/: main.py
src/api/: routes.py
src/core/: config.py  database.py  models.py
src/services/: chunker.py  deduplicator.py  interpreter.py  parser.py  validator.py
src/utils/: logger.py
tests/: test_chunker.py  test_deduplicator.py  test_interpreter.py  test_parser.py
