[project]
name = "kuk2rd"
version = "0.1.0"
description = "KUK2RD Knowledge Extraction System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "PyMuPDF>=1.24.5",
    "openai>=1.35.3",
    "streamlit>=1.35.0",
    "uvicorn>=0.30.1",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "greenlet>=3.0.3",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pandas-stubs~=2.3.3",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "dashboard"]
